fixed problem width horizontal scrollbar in address cards wrapper

--- a/css/main.css
+++ b/css/main.css
@@ -142,11 +142,6 @@ label:has([type=radio]:checked) {
   padding: 0;
   border: none;
 }
-@media (max-width: 700px) {
-  .address {
-    padding-left: 16px;
-  }
-}
 .address__top-wrapper {
   display: flex;
   justify-content: space-between;
@@ -197,9 +192,11 @@ label:has([type=radio]:checked) {
 }
 @media (max-width: 700px) {
   .address__cards-wrapper {
-    max-width: 100vw;
+    width: 100vw;
+    max-width: 100%;
     overflow: scroll;
     padding-right: 16px;
+    padding-left: 16px;
   }
 }
 .address__check:checked + .address-card {
@@ -217,6 +214,11 @@ label:has([type=radio]:checked) {
 @media (max-width: 992px) {
   .address__title {
     font-size: 21px;
+  }
+}
+@media (max-width: 700px) {
+  .address__title {
+    padding-left: 16px;
   }
 }
 .address__link {
@@ -242,6 +244,7 @@ label:has([type=radio]:checked) {
 @media (max-width: 700px) {
   .address__link {
     font-size: 17px;
+    padding-left: 16px;
   }
 }
 
