--- a/scss/blocks/_address.scss
+++ b/scss/blocks/_address.scss
@@ -2,7 +2,7 @@
     padding: 0;
     border: none;
     @include small {
-        padding-left: 16px;
+        // padding-left: 16px;
     }
     &__top-wrapper {
         display: flex;
@@ -47,9 +47,11 @@
             flex-wrap: nowrap;
         }
         @include small {
-            max-width: 100vw;
+            width: 100vw;
+            max-width: 100%;
             overflow: scroll;
             padding-right: 16px;
+            padding-left: 16px;
         }
     }
     &__check:checked + .address-card {
@@ -58,6 +60,9 @@
     &__title {
         @include subtitle-general;
         margin-bottom: 0;
+        @include small {
+            padding-left: 16px;
+        }
     }
     &__link {
         @include text-regular;
@@ -65,6 +70,7 @@
         text-decoration: none;
         @include small {
             font-size: 17px;
+            padding-left: 16px;
         }
     }
 }
